--- a/Respoke/app/src/main/res/layout/activity_connect.xml
+++ b/Respoke/app/src/main/res/layout/activity_connect.xml
@@ -6,26 +6,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/respoke_blue"
     tools:context=".ConnectActivity">
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:src="@drawable/logo_respoke"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:text="@string/hello_world"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        />
 
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView1"
+        android:layout_alignTop="@+id/logo"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
         android:hint="@string/endpointID"
+        android:background="@drawable/rect_text_edit"
+        android:textColor="@android:color/black"
+        android:textCursorDrawable="@null"
+        android:padding="4dp"
+        android:textSize="15dp"
         android:ems="10" >
 
         <requestFocus />
@@ -33,14 +38,30 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText1"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:hint="@string/login_group"
+        android:background="@drawable/rect_text_edit"
+        android:textColor="@android:color/black"
+        android:textCursorDrawable="@null"
+        android:padding="4dp"
+        android:textSize="15dp"
         android:ems="10" >
     </EditText>
+
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#F00"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/editText2"
+        android:layout_marginTop="5dp"
+        android:textSize="15dp"/>
 
     <Button
         android:id="@+id/button1"
@@ -50,6 +71,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:onClick="connect"
-        android:text="@string/connect" />
+        android:background="@drawable/connect_button"
+        android:text="@string/connect"
+        android:textColor="@drawable/connect_button_text"/>
 
 </RelativeLayout>
