Add initial group list activity, remove actionbar from connectionactivity.

--- a/Respoke/app/src/main/res/values/colors.xml
+++ b/Respoke/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="respoke_blue">#3b79b4</color>
     <color name="button_bg">#303030</color>
+    <color name="list_header_text">#bbbbbb</color>
 </resources>
