--- a/Respoke/app/src/main/res/layout/activity_group_list.xml
+++ b/Respoke/app/src/main/res/layout/activity_group_list.xml
@@ -11,7 +11,8 @@
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:listSelector="@drawable/listview_selector">
     </ListView>
 
 </RelativeLayout>
