Initial chat activity that shows remote messages as they arrive.

--- a/Respoke/app/src/main/res/values/colors.xml
+++ b/Respoke/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="button_bg">#303030</color>
     <color name="list_header_text">#bbbbbb</color>
     <color name="listview_selection_color">#dddddd</color>
+    <color name="remote_message_color">#cccccc</color>
 </resources>
