--- a/Respoke/app/src/main/res/menu/chat.xml
+++ b/Respoke/app/src/main/res/menu/chat.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.digium.respoke.ChatActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item android:id="@+id/action_call"
+        android:icon="@drawable/ic_action_call"
+        android:title="@string/action_call"
+        android:showAsAction="ifRoom" />
 </menu>
