--- a/Respoke/app/src/main/res/layout/activity_connect.xml
+++ b/Respoke/app/src/main/res/layout/activity_connect.xml
@@ -22,8 +22,8 @@
         android:id="@+id/editText1"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/logo"
-        android:layout_marginTop="50dp"
+        android:layout_below="@+id/logo"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:hint="@string/endpointID"
         android:background="@drawable/rect_text_edit"
