--- a/Respoke/app/src/main/res/layout/activity_call.xml
+++ b/Respoke/app/src/main/res/layout/activity_call.xml
@@ -29,12 +29,29 @@
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button android:id="@+id/dummy_button"
+            <Button android:id="@+id/mute_video_button"
                 style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:onClick="muteVideo"
+                android:text="Mute Video" />
+
+            <Button android:id="@+id/hangup_button"
+                style="?metaButtonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="hangup"
+                android:text="Hangup" />
+
+            <Button android:id="@+id/mute_audio_button"
+                style="?metaButtonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="muteAudio"
+                android:text="Mute Audio" />
 
         </LinearLayout>
     </FrameLayout>
