--- a/Respoke/app/src/main/res/layout/activity_call.xml
+++ b/Respoke/app/src/main/res/layout/activity_call.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.digium.respoke.CallVideoView
+        <android.opengl.GLSurfaceView
             android:id="@+id/videoview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
