--- a/Respoke/app/src/main/res/layout/activity_connect.xml
+++ b/Respoke/app/src/main/res/layout/activity_connect.xml
@@ -18,19 +18,29 @@
         android:layout_centerHorizontal="true"
         />
 
+    <ToggleButton
+        android:id="@+id/togglebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logo"
+        android:layout_centerHorizontal="true"
+        android:textOn="Brokered Auth On"
+        android:textOff="Brokered Auth Off"
+        android:onClick="onBrokeredAuthClicked"/>
+
     <EditText
         android:id="@+id/editText1"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:layout_marginTop="5dp"
+        android:layout_below="@+id/togglebutton"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:hint="@string/endpointID"
         android:background="@drawable/rect_text_edit"
         android:textColor="@android:color/black"
         android:textCursorDrawable="@null"
         android:padding="4dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:ems="10" >
 
         <requestFocus />
@@ -48,7 +58,7 @@
         android:textColor="@android:color/black"
         android:textCursorDrawable="@null"
         android:padding="4dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:ems="10" >
     </EditText>
 
@@ -61,7 +71,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="5dp"
-        android:textSize="15dp"/>
+        android:textSize="15sp"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
