--- a/Respoke/app/src/main/res/values/colors.xml
+++ b/Respoke/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="listview_selection_color">#dddddd</color>
     <color name="remote_message_color">#cccccc</color>
     <color name="black_overlay">#66000000</color>
+    <color name="incoming_call_bg">#b2ffffff</color>
 
 </resources>
