--- a/Respoke/app/src/main/res/layout/activity_group_list.xml
+++ b/Respoke/app/src/main/res/layout/activity_group_list.xml
@@ -36,7 +36,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/group_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/presence_layout"
