--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -122,6 +122,7 @@
                 android:textSize="27sp"/>
 
             <Button
+                android:id="@+id/answer_call_button"
                 android:layout_width="150dp"
                 android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
